--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://macbobby913.github.io/ChatChatMaru",
   "name": "chat-chat-maru",
   "version": "0.1.0",
   "private": true,
